tests/integrations/basic/tests/actual_tests/rustfix-mode_disabled.stderr
error: unused import: `std::collections::HashMap`
 --> tests/actual_tests/rustfix-mode_disabled.rs:6:5
  |
6 | use std::collections::HashMap;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/actual_tests/rustfix-mode_disabled.rs:2:9
  |
2 | #![deny(unused_imports)]
  |         ^^^^^^^^^^^^^^

warning: static variable `x` should have an upper case name
 --> tests/actual_tests/rustfix-mode_disabled.rs:9:12
  |
9 | pub static x: u32 = 0;
  |            ^ help: convert the identifier to upper case (notice the capitalization): `X`
  |
note: the lint level is defined here
 --> tests/actual_tests/rustfix-mode_disabled.rs:3:9
  |
3 | #![warn(non_upper_case_globals)]
  |         ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error; 1 warning emitted

